----------------------------------------------------------------------
 OmegaT 2.2.0 update 2 
----------------------------------------------------------------------
  0 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.2.0 update 2 vs. 2.2.0 update 1

  Bug fixes:

  - HTML filter: Entities from attributes were not converted to 
characters. This applied also to the HTML Help Compiler Filter.

----------------------------------------------------------------------
 OmegaT 2.2.0 update 1 
----------------------------------------------------------------------
  4 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.2.0 update 1 vs. 2.2.0

  Implemented requests:

  - Make the number of search results a parameter
  http://sourceforge.net/support/tracker.php?aid=3084009

  Other enhancements:

  - Galician localization updated to 2.1.9 (UI, Instant Start, Readme)
  - Italian localization updated to 2.2.0 (UI, Instant Start, Readme)
  - Japanese localization updated to 2.2.0 (UI, Instant Start, Readme, 2.0.5 documentation)

  Bug fixes:

  - XML, wrong handling of comments and PI in translatable text
  http://sourceforge.net/support/tracker.php?aid=1662205

----------------------------------------------------------------------
 OmegaT 2.2.0 
----------------------------------------------------------------------
  1 Enhancement
  3 Bugfixes
----------------------------------------------------------------------
2.2.0 vs. 2.1.9

  Implemented requests:

  - Create OmegaT tags for external TMX files
  http://sourceforge.net/support/tracker.php?aid=2891712

  Bug fixes:

  - With some fonts, "squares" were displayed in the Editor around 
segment markers

  - When the files in /source were changed, it was sometime not possible
to reload the project

  - When a search filter was used (e.g., "Display all results" unchecked, 